# recovery_disk_qt

./: .gitignore  CMakeLists.txt  README.md
.opencode/skills/: recovery-qt.md
scripts/: ejecutar.sh  recuperar_documentos_olds.sh  recuperar_sdd3.sh
src/: logmodel.cpp  logmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  recoveryengine.cpp  recoveryengine.h  settingsdialog.cpp  settingsdialog.h  statemanager.cpp  statemanager.h
